--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.TP1INF8405"
         tools:targetApi="31">
         <activity
+            android:name=".GameTest"
+            android:exported="false" />
+
+        <activity
             android:name=".More_Information"
             android:exported="false" />
         <activity
@@ -24,6 +28,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
