--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.TP1INF8405"
         tools:targetApi="31">
         <activity
-            android:name=".Game_main"
+            android:name=".GameActivity"
             android:exported="false" />
         <activity
             android:name=".More_Information"
